--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -25,9 +25,9 @@ data-grid {
   --highlight-color: #fffcee;
   --header-background: var(--bs-gray-200, #e9ecef);
   --header-color: var(--bs-dark, #212529);
-  --input-background: var(--bs-form-control-bg, #ffffff);
+  --input-background: var(--bs-body-bg, #ffffff);
   --input-border-color: var(--bs-border-color, #e9ecef);
-  --btn-background: var(--bs-form-control-bg, #ffffff);
+  --btn-background: var(--bs-body-bg, #ffffff);
   --btn-color: var(--color);
   --btn-border-color: var(--bs-border-color, #e9ecef);
   --body-bg: var(--bs-body-bg, #212529);
